...
                        onPressed: () {
                          Navigator.of(context).pushNamedAndRemoveUntil(
                              "SignIn", (route) => false);
                        },
                        child: Text("Sign In")),
                    ElevatedButton(
                        key: Key("Create_Account_Done"),
                        onPressed: () {
                          Navigator.of(context).pushNamedAndRemoveUntil(
                              "Home", (route) => false);
                        },
                        child: Text("Not Now"))
                  ],
...
                  children: [
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("First_Name_Field"),
                          validator: (value) =>
                              FirstNameFieldValidator.validate(value!),
                          keyboardType: TextInputType.name,
                          controller: firstName,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                    ),
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Second_Name_Field"),
                          validator: (value) =>
                              SecondNameFieldValidator.validate(value!),
                          keyboardType: TextInputType.name,
                          controller: secondName,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                  children: [
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Email_Field"),
                          validator: (value) =>
                              EmailFieldValidator.validate(value!),
                          keyboardType: TextInputType.emailAddress,
                          controller: email,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                      width: 10,
                    ),
                    Container(
                      width: 180,
                      color: Colors.blue[200],
                      child: TextFormField(
                        key: Key("Confirm_Email_Field"),
                        validator: (value) =>
                            ConfirmEmailFieldValidator.validate(value!),
                        keyboardType: TextInputType.emailAddress,
                        controller: confirmEmail,
                        decoration: InputDecoration(
                            icon: Icon(Icons.star),
...
                  children: [
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Password_Field"),
                          validator: (value) =>
                              PasswordFieldValidator.validate(value!),
                          obscureText: true,
                          controller: password,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                    ),
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Confirm_Password_Field"),
                          validator: (value) =>
                              ConfirmPasswordFieldValidator.validate(value!),
                          obscureText: true,
                          controller: confirmPassword,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                          padding: EdgeInsets.only(left: 5),
                          height: 20,
                          color: Colors.blue,
                          child: SizedBox(
                            width: 195,
                            child: DropdownButtonHideUnderline(
                              key: Key("Security_Question_Menu"),
                              child: DropdownButton<String>(
                                  isExpanded: true,
                                  icon: Icon(Icons.question_mark,
                                      color: Colors.white, size: 10),
                                  hint: Text(
                                    "Select Security Question",
...
                        ),
                        Container(
                          height: 30,
                          width: 200,
                          color: Colors.blue[200],
                          child: TextFormField(
                            key: Key("Security_Question_Field"),
                            validator: (value) =>
                                QuestionAnswerFieldValidator.validate(value!),
                            keyboardType: TextInputType.text,
                            style: TextStyle(fontSize: 16),
                            textAlign: TextAlign.left,
                            controller: questionAnswer,
...
                  children: [
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Age_Field"),
                          validator: (value) =>
                              AgeFieldValidator.validate(value!),
                          keyboardType: TextInputType.number,
                          controller: age,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                    ),
                    Flexible(
                      child: Container(
                        width: 200,
                        color: Colors.blue[200],
                        child: TextFormField(
                          key: Key("Country_Field"),
                          validator: (value) =>
                              CountryFieldValidator.validate(value!),
                          keyboardType: TextInputType.text,
                          controller: country,
                          decoration: InputDecoration(
                              icon: Icon(Icons.star),
...
                  ],
                ),
                SizedBox(
                  height: 10,
                ),
                ElevatedButton(
                  key: Key("Create_Account"),
                  onPressed: () {
                    SignUp();
                  },
                  child: Text("Sign Up"),
                ),
              ],
...
